--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-174.2KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-1.05MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-198.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-514.9KB/s(Youtube:不良林), server: 112.64.98.133, port: 63078, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 112.64.98.133}}
-  - {name: 未知国家-2.12MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
-  - {name: 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林), server: us1.nodegz.top, port: 1400, type: trojan, password: fc578146-8cfb-3c32-97e0-67621c90b130, sni: us1.nodegz.top, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇦 加拿大-1.63MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇩🇪 德国-327.2KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇯🇵 日本-302.1KB/s(Youtube:不良林), server: 85.208.108.94, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林), server: 185.167.116.250, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇯🇵 日本-189.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-333.1KB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇮🇳 印度-1.54MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.03MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
+  - {name: 🇸🇬 新加坡-442.6KB/s(Youtube:不良林), server: 626sg05.ok365.cyou, port: 443, type: trojan, password: 02f61efe-8380-413a-9233-6328ef8997f4, sni: 626sg05.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-174.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.05MB/s(Youtube:不良林)
-      - 🇯🇵 日本-198.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.9KB/s(Youtube:不良林)
-      - 未知国家-2.12MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.63MB/s(Youtube:不良林)
       - 🇩🇪 德国-327.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-302.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-278.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-189.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-333.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.03MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
