--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-2.95MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇯🇵 日本-1.24MB/s(Youtube:不良林), server: 85.208.108.94, port: 8008, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇸🇬 新加坡-442.6KB/s(Youtube:不良林), server: 626sg05.ok365.cyou, port: 443, type: trojan, password: 02f61efe-8380-413a-9233-6328ef8997f4, sni: 626sg05.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.66MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-323.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇮🇳 印度-1.54MB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.95MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
   - {name: 🇺🇸 美国-2.97MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇸🇬 新加坡-306.9KB/s(Youtube:不良林), server: 8.214.33.158, port: 80, type: vmess, uuid: cb81e6ab-1d83-4ac1-f0ad-ae5c2a7c29ef, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 8.214.33.158}}
-  - {name: 🇬🇧 英国-1.28MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.90MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-9.47MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5601, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.21MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5603, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.14MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.99MB/s(Youtube:不良林), server: mosaic.marythunt.xyz, port: 443, type: trojan, password: !<str> 372815193, sni: mosaic.marythunt.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.95MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.24MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-442.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.66MB/s(Youtube:不良林)
+      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.54MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.95MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.97MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-306.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.47MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.99MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
